--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ body {
   transition: transform 0.2s;
 }
 
+#countdown {
+  font-size: 5rem;
+  margin: 0;
+}
+
 #mlh-trust-badge:hover {
   transform: translateY(5px) scale(1.1);
 }
