--- a/static/styles.css
+++ b/static/styles.css
@@ -87,3 +87,38 @@ a:hover::after {
   font-size: 25px;
   padding: 20px;
 }
+
+.code-item{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+#warning-box{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.code-title{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.code-list{
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.code-paragraph{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#photo-title{
+  margin-top: 30px;
+}
+
+#rules-title{
+  margin-top: 100px;
+}
