--- a/static/styles.css
+++ b/static/styles.css
@@ -143,6 +143,8 @@ a:hover::after {
     background-image: url("bg.webp");
     background-size: cover;
     background-position: center;
+    overflow-y: hidden;
+    overflow-x: hidden;
     color: rgb(255, 255, 255);
     font-size: 11px;
   }
