--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,7 @@ body {
   transition: opacity 0.5s ease-in 0.5s;
   background-image: url("bg.webp");
   background-size: cover;
+  background-repeat: no-repeat;
   color: rgb(255, 255, 255);
 }
 
