--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,14 @@
   --background-color: rgb(255, 255, 255);
 }
 
+/*adds Jackpot font to be used*/
+@font-face{
+  font-family: 'Jackpot';
+  src: url('../fonts/Jackpot.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -26,6 +34,7 @@ body {
 }
 
 #countdown {
+  font-family: "Roboto", sans-serif;
   font-size: 5rem;
   margin: 0;
   color: var(--primary-color);
