--- a/static/styles.css
+++ b/static/styles.css
@@ -42,9 +42,21 @@ body {
 }
 
 #countdown {
-  font-size: 3rem;
+  font-size: 2em;
   margin: 0;
   color: var(--primary-color);
+}
+
+#index-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 25vh;
+  width: 50vw;
+}
+
+.index-text{
+  font-size: 1em;
 }
 
 .seats {
