--- a/static/styles.css
+++ b/static/styles.css
@@ -194,6 +194,7 @@ a:hover::after {
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
+    overflow: hidden;
   }
 
   .coming-soon {
