--- a/static/styles.css
+++ b/static/styles.css
@@ -50,12 +50,12 @@ body {
 }
 
 #countdown {
-  font-size: 3em;
+  font-size: 5vh;
   margin: 0;
 }
 
 .coming-soon {
-  font-size: 2em;
+  font-size: 3vh;
 }
 
 #index-content {
@@ -75,16 +75,6 @@ body {
   bottom: 0;
   will-change: transform; /* Optimize the animation performance */
   overflow: hidden; /* Prevent overflow issues */
-  animation: seats 1s infinite alternate;
-}
-
-@keyframes seats {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-5px);
-  }
 }
 
 #mlh-trust-badge:hover {
@@ -193,12 +183,11 @@ a:hover::after {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;
     overflow: hidden;
   }
 
   .coming-soon {
-    font-size: 1em;
+    font-size: 2.5vh;
   }
 
   .logo-img {
@@ -212,21 +201,20 @@ a:hover::after {
   }
 
   #countdown {
-    font-size: 0.75em;
+    font-size: 2vh;
     margin: 0;
   }
 
   .event-date {
-    font-size: 0.75em;
+    font-size: 1.5vh;
   }
 
   .seats {
-    width: 55vh;
-    padding-bottom: 5vh;
+    width: 100vw;
   }
 
   .footer-nav {
-    font-size: 0.35em;
+    font-size: 0.4em;
   }
 
   .footer-nav a {
