--- a/static/styles.css
+++ b/static/styles.css
@@ -74,7 +74,20 @@ body {
   position: absolute;
   bottom: 0;
   will-change: transform; /* Optimize the animation performance */
-  overflow: hidden; /* Prevent overflow issues */
+  overflow: hidden;
+  animation: breathe 2.5s infinite ease-in-out;
+}
+
+@keyframes breathe {
+  0% {
+    transform: translateY(-5px);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(-5px);
+  }
 }
 
 #mlh-trust-badge:hover {
